--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+html, body { height: 100%; background: linear-gradient(to right, #4538f8 0%, #671594 100%);;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
