Inserindo icon no menu

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -15,24 +15,29 @@
   <mat-toolbar>
     <a href="/users" class="toolbarRow">
       <mat-toolbar-row>
-        <span>Users</span>
+        <!-- <span class="material-symbols-outlined">Users</span> -->
+        <mat-icon title="Editar" fontIcon="group" color="primary"></mat-icon>
+        <span style="margin-left: 5px;">Users</span> 
       </mat-toolbar-row>
     </a>
     <a href="">
       <mat-toolbar-row class="toolbarRow">
-        <span>page2</span>
+        <mat-icon title="Editar" fontIcon="info" color="primary"></mat-icon>
+        <span style="margin-left: 5px;">Users</span> 
       </mat-toolbar-row>
     </a>
 
     <a href="">
       <mat-toolbar-row class="toolbarRow">
-        <span>page3</span>
+        <mat-icon title="Editar" fontIcon="info" color="primary"></mat-icon>
+        <span style="margin-left: 5px;">Users</span> 
       </mat-toolbar-row>
     </a>
 
     <a href="" class="logout">
       <mat-toolbar-row>
-        <span>Sair</span>
+        <mat-icon title="Editar" fontIcon="logout" color="primary" class="logoutIcon"></mat-icon>
+        <span style="margin-left: 5px;">Users</span> 
       </mat-toolbar-row>
     </a>
   </mat-toolbar>
