--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -21,12 +21,12 @@ a{
   border: 2px solid #136497;
 }
 
-.logout{
-  transition: all .5s;
-  border: 2px solid transparent;
-}
 .logout:hover{
-  border: 2px solid #ff0000;
+  transition: all .5s;
   background-color: #ff0000;
   color: white;
+  .logoutIcon {
+    transition: all .5s;
+    color: white;
+  }
 }
