--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -27,6 +27,10 @@ a{
   color: white;
   .logoutIcon {
     transition: all .5s;
-    color: white;
   }
+}
+
+.user{
+  position: absolute;
+  right: 20px;
 }
