--- a/src/app/module/users/users.component.html
+++ b/src/app/module/users/users.component.html
@@ -19,8 +19,9 @@
   <ng-container matColumnDef="options">
     <th mat-header-cell *matHeaderCellDef>Options</th>
     <td mat-cell *matCellDef="let element">
-      <mat-icon title="Editar" fontIcon="edit" color="primary" (click)="edit(element)"></mat-icon>
-      <mat-icon title="Deletar" fontIcon="delete" color="warn" (click)="delete(element)"></mat-icon>
+      <button class="btnUsers" mat-mini-fab (click)="edit(element)"><mat-icon color="primary" fontIcon="edit"></mat-icon></button>
+      <button class="btnUsers" mat-mini-fab (click)="delete(element)"><mat-icon color="warn" fontIcon="delete"></mat-icon></button>
+
     </td>
   </ng-container>
 
