Criando Dockerfile e configurando servidor nginx

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="showMenu()">
     <mat-icon>menu</mat-icon>
   </button>
-  <a href="">
+  <a href="/home">
     <span title="Home">Task Manager</span>
   </a>
   <button mat-icon-button class="user">
