--- a/src/app/module/home/home.component.scss
+++ b/src/app/module/home/home.component.scss
@@ -1,4 +1,4 @@
-.example-container {
+.container{
     width: 400px;
     max-width: 100%;
     margin: 0 25px 25px 0;
@@ -6,7 +6,7 @@
     vertical-align: top;
   }
   
-  .example-list {
+  .list {
     border: solid 1px #ccc;
     min-height: 60px;
     background: white;
@@ -15,7 +15,7 @@
     display: block;
   }
   
-  .example-box {
+  .box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
@@ -45,10 +45,16 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-box:last-child {
+  .box:last-child {
     border: none;
   }
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  .list.cdk-drop-list-dragging .box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  .groupTask{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
   }
